RESOLVED FIXED74714
[chromium] MediaStream API: Fixing memory leak in WebMediaStreamSource
https://bugs.webkit.org/show_bug.cgi?id=74714
Summary [chromium] MediaStream API: Fixing memory leak in WebMediaStreamSource
Tommy Widenflycht
Reported 2011-12-16 05:59:01 PST
Missed that PassRefPtr does a ref if constructed with a raw pointer.
Attachments
Patch (2.44 KB, patch)
2011-12-16 06:03 PST, Tommy Widenflycht
no flags
Tommy Widenflycht
Comment 1 2011-12-16 06:03:02 PST
Eric Seidel (no email)
Comment 2 2011-12-19 11:16:20 PST
Comment on attachment 119608 [details] Patch Yes, assuming m_private is a RefPtr, the previous code was nonsense. :) I'm curious who reviewed it! :p
WebKit Review Bot
Comment 3 2011-12-19 13:02:16 PST
Comment on attachment 119608 [details] Patch Clearing flags on attachment: 119608 Committed r103258: <http://trac.webkit.org/changeset/103258>
WebKit Review Bot
Comment 4 2011-12-19 13:02:20 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.