[chromium] MediaStream API: Fixing memory leak in WebMediaStreamSource https://bugs.webkit.org/show_bug.cgi?id=74714

Reviewed by Eric Seidel.

Missed that PassRefPtr does a ref if constructed with a raw pointer.
Also removed an extra space in WebMediaStreamDescriptor.cpp.

* src/WebMediaStreamDescriptor.cpp:
(WebKit::WebMediaStreamDescriptor::sources):
* src/WebMediaStreamSource.cpp:
(WebKit::WebMediaStreamSource::operator=):


Canonical link: https://commits.webkit.org/91622@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103258 268f45cc-cd09-0410-ab3c-d52691b4dbfc