Source/WebKit/chromium/src/WebMediaStreamSource.cpp
@@ -49,11 +49,7 @@ WebMediaStreamSource::WebMediaStreamSource(const PassRefPtr<MediaStreamSource>& 
 
 WebMediaStreamSource& WebMediaStreamSource::operator=(WebCore::MediaStreamSource* mediaStreamSource)
 {
-    m_private.reset();
-    if (mediaStreamSource) {
-        mediaStreamSource->ref();
-        m_private = mediaStreamSource;
-    }
+    m_private = mediaStreamSource;
     return *this;
 }
 
